<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context="com.example.alex.calculator_austin.MainActivity">

    <TextView
        android:id="@+id/inputView"
        android:layout_width="@dimen/text_padding"
        android:layout_height="50dip"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_row="0"
        android:text="@string/five"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/clear_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/clear" />

    <Button
        android:id="@+id/ce_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/clearE" />

    <Button
        android:id="@+id/sign_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/sign" />

    <Button
        android:id="@+id/div_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="3"
        android:layout_row="1"
        android:text="@string/div" />

    <Button
        android:id="@+id/num7_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/seven" />



    <Button
        android:id="@+id/num8_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/eight" />

    <Button
        android:id="@+id/num9_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/nine" />

    <Button
        android:id="@+id/add_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="3"
        android:layout_row="2"
        android:text="@string/plus" />

    <Button
        android:id="@+id/num4_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/four" />


    <Button
        android:id="@+id/num5_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/five" />

    <Button
        android:id="@+id/num6_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/six" />

    <Button
        android:id="@+id/minus_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="3"
        android:layout_row="3"
        android:text="@string/minus" />

    <Button
        android:id="@+id/num1_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/one" />


    <Button
        android:id="@+id/num2_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/two" />

    <Button
        android:id="@+id/num3_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/three" />

    <Button
        android:id="@+id/mult_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="3"
        android:layout_row="4"
        android:text="@string/mult" />

    <Button
        android:id="@+id/num0_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/zero" />


    <Button
        android:id="@+id/point_b"
        android:layout_width="@dimen/button_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/pt" />

    <Button
        android:id="@+id/eq_b"
        android:layout_width="@dimen/long_padding"
        android:layout_height="@dimen/button_padding"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:text="@string/eq" />

</GridLayout>
